--- a/Pipfile
+++ b/Pipfile
@@ -6,8 +6,9 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-python-socketio = {extras = ["client"],version = "*"}
+python-socketio = {extras = ["asyncio_client"],version = "*"}
 eventlet = "*"
+aiohttp = {extras = ["speedups"],version = "*"}
 
 [requires]
 python_version = "3.7"
