--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ verify_ssl = true
 python-socketio = {extras = ["asyncio_client"],version = "*"}
 eventlet = "*"
 aiohttp = {extras = ["speedups"],version = "*"}
+flask = "*"
 
 [requires]
 python_version = "3.7"
