Added pug but not rendering data

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "mongoose": "^5.9.3",
+    "pug": "^2.0.4",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
