--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "homepage": "https://github.com/angelhodar/AgreLink#readme",
   "dependencies": {
     "acorn": "^7.1.1",
-    "connect-mongodb-session": "^2.3.1",
+    "connect-mongo": "^3.2.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
