--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "AgreLink",
   "version": "1.0.0",
   "description": "Automated virtual reality exercises for people with acquired brain damage",
-  "main": "server.js",
+  "main": "src/app.js",
   "scripts": {
-    "start": "node server.js",
-    "start-dev": "nodemon server.js",
-    "populate-db": "node populate_db_exercises.js",
+    "start": "node src/app.js",
+    "start-dev": "nodemon src/app.js",
+    "populate-db": "node src/db/populate_exercises.js",
     "client": "node tests/test_client.js"
   },
   "repository": {
