--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/angelhodar/AgreLink#readme",
   "dependencies": {
     "acorn": "^7.1.1",
+    "bcrypt": "^4.0.1",
     "connect-mongo": "^3.2.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
