Created dashboard views and routes (closes #19)  and reworked views structure (closes #20 closes #22). Also created script to populate DB with fake patients (closes #21). Fixed slider color (closes #6)

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node src/app.js",
     "start-dev": "nodemon src/app.js",
-    "populate-db": "node src/db/populate_exercises.js",
+    "populate-exercises": "node src/db/populate_exercises.js",
+    "populate-patients": "node src/db/populate_patients.js",
     "client": "node tests/test_client.js"
   },
   "repository": {
