Updated web link on README #13 and dev run script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js",
-    "start-dev": "nodemon src/app.js",
+    "dev": "nodemon src/app.js",
     "populate-exercises": "node src/db/populate_exercises.js",
     "populate-patients": "node src/db/populate_patients.js",
     "client": "node tests/test_client.js"
