--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Automated virtual reality exercises for people with acquired brain damage",
   "main": "src/app.js",
   "scripts": {
-    "start": "node src/app.js",
-    "dev": "nodemon src/app.js",
-    "populate-exercises": "node src/db/populate_exercises.js",
-    "populate-patients": "node src/db/populate_patients.js",
+    "start": "node server/app.js",
+    "dev": "nodemon server/app.js",
+    "populate-exercises": "node server/db/populate_exercises.js",
+    "populate-patients": "node server/db/populate_patients.js",
     "client": "node tests/test_client.js"
   },
   "repository": {
@@ -23,11 +23,8 @@
   "homepage": "https://github.com/angelhodar/AgreLink#readme",
   "dependencies": {
     "acorn": "^7.1.1",
-    "bcrypt": "^4.0.1",
     "connect-mongo": "^3.2.0",
-    "ejs": "^3.0.2",
     "express": "^4.17.1",
-    "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.17.0",
     "mongoose": "^5.9.7",
     "passport": "^0.4.1",
