Transformed backend to API REST, needs auth from firebase already imported. Added firebase auth on client, needs testing

--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "axios": "^0.19.2",
+    "firebase": "^7.14.3",
     "quasar": "^1.0.0"
   },
   "devDependencies": {
