--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "node server/app.js",
     "dev": "nodemon server/app.js",
-    "populate-exercises": "node server/db/populate_exercises.js",
-    "populate-patients": "node server/db/populate_patients.js",
+    "populate-exercises": "node server/db/populators/populate_exercises.js",
+    "populate-patients": "node server/db/populators/populate_patients.js",
     "client": "node tests/test_client.js"
   },
   "repository": {
@@ -22,16 +22,15 @@
   },
   "homepage": "https://github.com/angelhodar/AgreLink#readme",
   "dependencies": {
-    "acorn": "^7.1.1",
-    "connect-mongo": "^3.2.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-session": "^1.17.0",
+    "firebase-admin": "^8.12.1",
     "mongoose": "^5.9.7",
-    "passport": "^0.4.1",
-    "passport-google-oauth": "^2.0.0",
-    "pug": "^2.0.4",
+    "morgan": "^1.10.0",
     "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "swagger-jsdoc": "^4.0.0",
+    "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
