--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.1",
     "core-js": "^3.6.5",
     "firebase": "^7.17.1",
+    "jwt-decode": "^2.2.0",
     "particles.js": "^2.0.0",
     "quasar": "^1.0.0"
   },
