--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.vue ./ --fix",
-    "test": "echo \"No test specified\" && exit 0"
+    "test": "echo \"No test specified\" && exit 0",
+    "dev": "quasar dev",
+    "build": "quasar build",
+    "deploy": "vercel"
   },
   "dependencies": {
     "@quasar/extras": "^1.9.4",
