--- a/package.json
+++ b/package.json
@@ -13,18 +13,20 @@
     "deploy": "vercel"
   },
   "dependencies": {
-    "@quasar/extras": "^1.9.4",
+    "@quasar/extras": "^1.9.6",
     "axios": "^0.18.1",
+    "chart.js": "^2.9.3",
     "core-js": "^3.6.5",
     "jwt-decode": "^2.2.0",
     "particles.js": "^2.0.0",
-    "quasar": "^1.0.0",
-    "query-string": "^6.13.1",
+    "quasar": "^1.14.0",
+    "query-string": "^6.13.2",
     "socket.io-client": "^2.3.0",
+    "vue-chartjs": "^3.5.1",
     "vue-socket.io-extended": "^4.0.4"
   },
   "devDependencies": {
-    "@quasar/app": "^2.0.8",
+    "@quasar/app": "^2.1.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.0",
